--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prettier": "./node_modules/.bin/prettier 'src/**/*.(ts|tsx|css|js|jsx)' --check",
+    "prettier:write": "npm run prettier -- --write"
   },
   "eslintConfig": {
     "extends": [
